; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_skbuff.c_sock_queue_err_skb.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_skbuff.c_sock_queue_err_skb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sock = type { i32 (%struct.sock*)*, i32, i32, i32 }
%struct.sk_buff = type { i32, i32, %struct.sock* }

@ENOMEM = common dso_local global i32 0, align 4
@sock_rmem_free = common dso_local global i32 0, align 4
@SOCK_DEAD = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sock_queue_err_skb(%struct.sock* %0, %struct.sk_buff* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.sock*, align 8
  %5 = alloca %struct.sk_buff*, align 8
  store %struct.sock* %0, %struct.sock** %4, align 8
  store %struct.sk_buff* %1, %struct.sk_buff** %5, align 8
  %6 = load %struct.sock*, %struct.sock** %4, align 8
  %7 = getelementptr inbounds %struct.sock, %struct.sock* %6, i32 0, i32 2
  %8 = call i32 @atomic_read(i32* %7)
  %9 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %10 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 8
  %12 = add i32 %8, %11
  %13 = load %struct.sock*, %struct.sock** %4, align 8
  %14 = getelementptr inbounds %struct.sock, %struct.sock* %13, i32 0, i32 3
  %15 = load i32, i32* %14, align 8
  %16 = call i64 @READ_ONCE(i32 %15)
  %17 = trunc i64 %16 to i32
  %18 = icmp uge i32 %12, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %2
  %20 = load i32, i32* @ENOMEM, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %56

22:                                               ; preds = %2
  %23 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %24 = call i32 @skb_orphan(%struct.sk_buff* %23)
  %25 = load %struct.sock*, %struct.sock** %4, align 8
  %26 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %27 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %26, i32 0, i32 2
  store %struct.sock* %25, %struct.sock** %27, align 8
  %28 = load i32, i32* @sock_rmem_free, align 4
  %29 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %30 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %29, i32 0, i32 1
  store i32 %28, i32* %30, align 4
  %31 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %32 = getelementptr inbounds %struct.sk_buff, %struct.sk_buff* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 8
  %34 = load %struct.sock*, %struct.sock** %4, align 8
  %35 = getelementptr inbounds %struct.sock, %struct.sock* %34, i32 0, i32 2
  %36 = call i32 @atomic_add(i32 %33, i32* %35)
  %37 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %38 = call i32 @skb_set_err_queue(%struct.sk_buff* %37)
  %39 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %40 = call i32 @skb_dst_force(%struct.sk_buff* %39)
  %41 = load %struct.sock*, %struct.sock** %4, align 8
  %42 = getelementptr inbounds %struct.sock, %struct.sock* %41, i32 0, i32 1
  %43 = load %struct.sk_buff*, %struct.sk_buff** %5, align 8
  %44 = call i32 @skb_queue_tail(i32* %42, %struct.sk_buff* %43)
  %45 = load %struct.sock*, %struct.sock** %4, align 8
  %46 = load i32, i32* @SOCK_DEAD, align 4
  %47 = call i32 @sock_flag(%struct.sock* %45, i32 %46)
  %48 = icmp ne i32 %47, 0
  br i1 %48, label %55, label %49

49:                                               ; preds = %22
  %50 = load %struct.sock*, %struct.sock** %4, align 8
  %51 = getelementptr inbounds %struct.sock, %struct.sock* %50, i32 0, i32 0
  %52 = load i32 (%struct.sock*)*, i32 (%struct.sock*)** %51, align 8
  %53 = load %struct.sock*, %struct.sock** %4, align 8
  %54 = call i32 %52(%struct.sock* %53)
  br label %55

55:                                               ; preds = %49, %22
  store i32 0, i32* %3, align 4
  br label %56

56:                                               ; preds = %55, %19
  %57 = load i32, i32* %3, align 4
  ret i32 %57
}

declare dso_local i32 @atomic_read(i32*) #1

declare dso_local i64 @READ_ONCE(i32) #1

declare dso_local i32 @skb_orphan(%struct.sk_buff*) #1

declare dso_local i32 @atomic_add(i32, i32*) #1

declare dso_local i32 @skb_set_err_queue(%struct.sk_buff*) #1

declare dso_local i32 @skb_dst_force(%struct.sk_buff*) #1

declare dso_local i32 @skb_queue_tail(i32*, %struct.sk_buff*) #1

declare dso_local i32 @sock_flag(%struct.sock*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
